--- a/css/anadir_noticias.css
+++ b/css/anadir_noticias.css
@@ -9,12 +9,12 @@
   margin-bottom: 20px;
   overflow: hidden;
   background-color: #fff;
-  padding: 10px 50px;
+  padding: 20px 50px;
   border-radius: 10px;
   border: #bbb solid 1px;
 }
 
-.form-field {
+/* .form-field {
   margin: 20px 0;
 }
 
@@ -77,7 +77,7 @@ textarea {
 
 .form-container input[type="submit"]:hover {
   background-color: #0080ff;
-}
+} */
 
 @media screen and (max-width: 800px) {
   .content-container {
