--- a/css/modificar_noticia.css
+++ b/css/modificar_noticia.css
@@ -14,7 +14,7 @@
   border: #bbb solid 1px;
 }
 
-.form-field {
+/* .form-field {
   margin: 20px 0;
 }
 
@@ -77,7 +77,7 @@ textarea {
 
 .form-container input[type="submit"]:hover {
   background-color: #0080ff;
-}
+} */
 
 @media screen and (max-width: 800px) {
   .content-container {
