--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,18 @@ a {
   margin-left: 20px;
 }
 
+@media screen and (max-width: 414px) {
+  .header-col img {
+    height: 75px;
+    width: 75%;
+  }
+}
+/* @media screen and (max-width: 770px) {
+  .header-col img {
+    height: 50px;
+    width: 40%;
+  }
+} */
 /* Navbar */
 .nav-row {
   background-color: #fff;
