--- a/css/style.css
+++ b/css/style.css
@@ -159,12 +159,12 @@ a {
     width: 75%;
   }
 }
-/* @media screen and (max-width: 770px) {
+@media screen and (max-width: 370px) {
   .header-col img {
-    height: 50px;
+    height: 40px;
     width: 40%;
   }
-} */
+}
 /* Navbar */
 .nav-row {
   background-color: #fff;
