--- a/css/style.css
+++ b/css/style.css
@@ -153,12 +153,12 @@ a {
   margin-left: 20px;
 }
 
-@media screen and (max-width: 414px) {
+/* @media screen and (max-width: 414px) {
   .header-col img {
     height: 75px;
     width: 75%;
   }
-}
+} */
 @media screen and (max-width: 375px) {
   .header-col img {
     height: 40px;
