--- a/css/style.css
+++ b/css/style.css
@@ -159,13 +159,13 @@ a {
     width: 75%;
   }
 } */
-/* @media screen and (max-width: 375px) {
+@media screen and (max-width: 400px) {
   .header-col img {
-    height: 40px;
-    width: 40%;
+    height: auto;
+    width: 100%;
   }
-} */
-@media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+}
+/* @media only screen and (device-width: 375px) and (device-height: 812px) {
   .header-col img {
     height: 70px;
     width: 80%;
@@ -183,6 +183,12 @@ a {
     width: 80%;
   }
 }
+@media only screen and (device-width: 320px) and (device-height: 568px) {
+  .header-col img {
+    height: 70px;
+    width: 70%;
+  }
+} */
 /* Navbar */
 .nav-row {
   background-color: #fff;
