--- a/css/style.css
+++ b/css/style.css
@@ -622,6 +622,7 @@ a {
   .callout-btn-section {
     font-size: 22px;
     font-weight: 100;
+    padding-top: 20px;
     padding-bottom: 15px;
     /* padding: 15px;
     margin: 12px; */
