--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,8 @@ a {
     padding-top: 0px;
     padding-bottom: 15px;
     margin-top: 0px;
+    margin-bottom: 50px;
+    margin: 50px;
   }
 }
 
