--- a/css/style.css
+++ b/css/style.css
@@ -618,12 +618,12 @@ a {
 @media screen and (max-width: 450px) {
   .callout p {
     display: none;
+    width: 0%;
+    height: 0px;
   }
   .callout-btn-section {
     padding-top: 0px;
     padding-bottom: 15px;
-    width: 60%;
-    height: auto;
   }
 }
 
