--- a/css/style.css
+++ b/css/style.css
@@ -616,11 +616,10 @@ a {
   }
 }
 @media screen and (max-width: 450px) {
-  .callout p {
+  /*  .callout p {
     display: none;
-  }
+  } */
   .callout-btn-section {
-    display: flex;
     padding-top: 0px;
     padding-bottom: 15px;
   }
