--- a/css/style.css
+++ b/css/style.css
@@ -622,9 +622,9 @@ a {
   .callout-btn-section {
     padding-top: 0px;
     padding-bottom: 15px;
-  }
-  .callout-btn1 {
     padding: 5px;
+    margin: 40px;
+    font-size: 1px;
   }
 }
 
