--- a/css/style.css
+++ b/css/style.css
@@ -620,13 +620,8 @@ a {
     display: none;
   }
   .callout-btn-section {
-    padding-top: 0px;
-    padding-bottom: 15px;
-  }
-  .callout-btn1 {
-    font-size: 1px;
-    width: 100%;
-    height: 100px;
+    padding: 0;
+    margin: 0;
   }
 }
 
