--- a/css/style.css
+++ b/css/style.css
@@ -620,8 +620,8 @@ a {
     display: none;
   }
   .callout-btn-section {
-    /* display: block;
-    margin: auto; */
+    display: block;
+    margin: auto;
     padding-top: 0px;
   }
 }
