--- a/css/style.css
+++ b/css/style.css
@@ -618,6 +618,7 @@ a {
 @media screen and (max-width: 450px) {
   .callout p {
     display: none;
+    padding: 0px;
   }
   .callout-btn-section {
     padding-top: 0px;
