--- a/css/style.css
+++ b/css/style.css
@@ -620,7 +620,13 @@ a {
     display: none;
   }
   .callout-btn-section {
-    padding-top: 100000px;
+    padding-top: 0px;
+  }
+  .callout-btn1 {
+    width: 10%;
+  }
+  .callout-btn2 {
+    height: 10px;
   }
 }
 
