--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,11 @@ a {
     padding-top: 0px;
   }
 }
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  .callout p {
+    display: none;
+  }
+}
 
 .callout h1 {
   color: #fff;
