--- a/css/style.css
+++ b/css/style.css
@@ -616,6 +616,11 @@ a {
   }
 }
 @media screen and (max-width: 450px) {
+  .callout {
+    height: auto;
+    width: 100%;
+    background-size: 100%;
+  }
   .callout p {
     display: none;
   }
@@ -623,7 +628,7 @@ a {
     padding-top: 0px;
   }
 }
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+/* @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .callout p {
     display: none;
     padding: 0;
@@ -631,7 +636,7 @@ a {
   .callout-btn-section {
     padding: 0;
   }
-}
+} */
 
 .callout h1 {
   color: #fff;
