--- a/css/style.css
+++ b/css/style.css
@@ -616,6 +616,14 @@ a {
   }
 }
 @media screen and (max-width: 450px) {
+  .callout p {
+    display: none;
+  }
+  .callout-btn-section {
+    padding-top: 0px;
+  }
+}
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .callout {
     height: auto;
     width: 100%;
@@ -628,15 +636,6 @@ a {
     padding-top: 0px;
   }
 }
-/* @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
-  .callout p {
-    display: none;
-    padding: 0;
-  }
-  .callout-btn-section {
-    padding: 0;
-  }
-} */
 
 .callout h1 {
   color: #fff;
