--- a/css/style.css
+++ b/css/style.css
@@ -623,11 +623,11 @@ a {
     padding-top: 0px;
   }
 }
-/* @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .callout {
-    height: auto;
+    height: 500px;
     width: 100%;
-    background-size: 50%;
+    /* background-size: 50%; */
   }
   .callout p {
     display: none;
@@ -635,7 +635,7 @@ a {
   .callout-btn-section {
     padding-top: 0px;
   }
-} */
+}
 
 .callout h1 {
   color: #fff;
