--- a/css/palmares.css
+++ b/css/palmares.css
@@ -30,7 +30,12 @@
   width: 360px;
   margin: auto;
 }
-
+@media screen and (max-width: 400px) {
+  .trophy-img img {
+    height: auto;
+    width: 100%;
+  }
+}
 @media screen and (max-width: 1100px) {
   .trophy-img img {
     width: 300px;
