--- a/css/palmares.css
+++ b/css/palmares.css
@@ -30,7 +30,7 @@
   width: 360px;
   margin: auto;
 }
-@media screen and (max-width: 400px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .trophy-img img {
     height: auto;
     width: 100%;
