--- a/css/palmares.css
+++ b/css/palmares.css
@@ -32,8 +32,8 @@
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
   .trophy-img img {
-    height: auto;
-    width: 100%;
+    height: 10px;
+    width: 100px;
   }
 }
 @media screen and (max-width: 1100px) {
