--- a/css/palmares.css
+++ b/css/palmares.css
@@ -30,12 +30,7 @@
   width: 360px;
   margin: auto;
 }
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
-  .trophy-img img {
-    height: 200px;
-    width: 200px;
-  }
-}
+
 @media screen and (max-width: 1100px) {
   .trophy-img img {
     width: 300px;
@@ -46,7 +41,7 @@
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (max-width: 375px) {
   .palmares-content {
     width: 80%;
     margin: 30px auto;
