--- a/css/palmares.css
+++ b/css/palmares.css
@@ -30,7 +30,21 @@
   width: 360px;
   margin: auto;
 }
-
+@media screen and (max-width: 450px) {
+  .trophy-img img {
+    height: 200px;
+    width: 200px;
+  }
+}
+@media screen and (min-width: 300px) and (max-width: 350px) and (max-width: 480px) {
+  .trophy-img img {
+    display: inline-block;
+    width: 300px;
+  }
+  .trophy-text {
+    display: block;
+  }
+}
 @media screen and (max-width: 1100px) {
   .trophy-img img {
     width: 300px;
