--- a/css/palmares.css
+++ b/css/palmares.css
@@ -63,8 +63,12 @@
     width: 100%;
   }
 }
+@media screen and (max-width: 700px) {
+  .palmares-content {
+    display: block;
+  }
 
-@media screen and (max-width: 900px) and (max-width: 375px) {
+/* @media screen and (max-width: 900px) and (max-width: 375px) {
   .palmares-content {
     width: 80%;
     margin: 30px auto;
@@ -91,4 +95,4 @@
   .trophy-text p {
     margin: 7px auto 40px;
   }
-}
+} */
