--- a/css/palmares.css
+++ b/css/palmares.css
@@ -71,7 +71,7 @@
   .palmares-content {
     display: block;
   }
-
+}
 /* @media screen and (max-width: 900px) and (max-width: 375px) {
   .palmares-content {
     width: 80%;
