--- a/css/style.css
+++ b/css/style.css
@@ -616,10 +616,10 @@ a {
   }
 }
 @media screen and (max-width: 450px) {
-  .callout {
+  /* .callout {
     height: 400px;
-    /* background-size: 200%; */
-  }
+    background-size: 200%;
+  } */
   .callout p {
     display: none;
   }
