--- a/css/login.css
+++ b/css/login.css
@@ -73,3 +73,11 @@ a {
   text-decoration: none;
   background-color: transparent;
 }
+@media (max-width: 600px) {
+  .btn-primary {
+    padding: 2px 4px;
+    font-size: 80%;
+    line-height: 1;
+    border-radius: 3px;
+  }
+}
