--- a/css/login.css
+++ b/css/login.css
@@ -80,12 +80,8 @@ a {
   }
   .form-button {
     text-align: center;
-  }
-  .link-button {
-    float: right;
-  }
-  button {
-    width: 40%;
-    margin: 35px 0 25;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-right: 10px;
   }
 }
