--- a/css/login.css
+++ b/css/login.css
@@ -80,8 +80,7 @@ a {
   }
   .form-button {
     text-align: center;
-    padding-left: 100px;
+    /* padding-left: 100px; */
     padding-right: 100px;
-    margin-right: 10px;
   }
 }
