--- a/css/login.css
+++ b/css/login.css
@@ -80,7 +80,7 @@ a {
   }
   .form-button {
     /* padding-left: 100px; */
-    padding-right: 100px;
+    margin-right: 50px;
     width: 40%;
   }
 }
