--- a/css/login.css
+++ b/css/login.css
@@ -75,12 +75,7 @@ a {
 }
 @media (max-width: 600px) {
   .btn-primary {
-    padding-right: 10px;
-    margin-right: 10px;
-  }
-  .form-button {
-    /* padding-left: 100px; */
-    margin-right: 50px;
-    width: 150%;
+    width: 40vw;
+    padding: 10px;
   }
 }
