--- a/css/noticias.css
+++ b/css/noticias.css
@@ -2,53 +2,53 @@
     width: 75%;
     display: table;
     margin-bottom: 30px;
-  }
+}
   
-  .news-container h1 {
+.news-container h1 {
     text-align: left;
-  }
+}
   
-  .news-container h4 {
+.news-container h4 {
     margin-top: 0;
-  }
+}
   
-  .news-row {
+.news-row {
     display: flex;
     flex-wrap: wrap;
-  }
+}
   
-  .news-col {
+.news-col {
     padding: 0 20px;
     margin-top: 25px;
     width: 50%;
-  }
+}
   
-  .img-wrap {
+.img-wrap {
     float: left;
     display: block;
-  }
+}
   
-  .news-image {
+.news-image {
     padding-right: 15px;
     display: table-cell;
     width: 200px;
-  }
+}
   
-  .news-text {
+.news-text {
     display: table-cell;
     vertical-align: top;
-  }
+}
   
-  .news-text h5 {
+.news-text h5 {
     margin: 0;
     color: #555;
-  }
+}
   
-  .news-text p {
+.news-text p {
     color: #666;
-  }
+}
   
-  .news-text a {
+.news-text a {
     display: inline-block;
     font-size: 20px;
     color: #fff;
@@ -59,8 +59,43 @@
     -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
     box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
     cursor: pointer;
-  }
+}
   
-  .news-text a:hover {
+.news-text a:hover {
     background-color: #0080ff;
-  }
+}
+
+@media screen and (max-width: 1050px) {
+    .news-col {
+      width: 100%;
+    }
+  
+    @media screen and (max-width: 600px) {
+      .news-col {
+        width: 100%;
+        margin-top: 30px;
+      }
+  
+      .img-wrap {
+        width: 100%;
+      }
+  
+      .news-image {
+        max-height: 350px;
+        width: auto;
+        max-width: 100%;
+      }
+  
+      .news-text h5 {
+        margin-top: 10px;
+      }
+  
+      .news-text h3 {
+        margin: 5px 0 10px;
+      }
+  
+      .news-text p {
+        margin-top: 5px;
+      }
+    }
+}
