--- a/css/noticia.css
+++ b/css/noticia.css
@@ -4,8 +4,9 @@
 }
 
 .individual-news-container img {
-  width: 100%;
+  width: 70%;
   display: block;
+  margin:auto
 }
 
 .individual-news-title {
