--- a/css/noticia.css
+++ b/css/noticia.css
@@ -4,7 +4,9 @@
 }
 
 .individual-news-container img {
-  width: 70%;
+  object-fit: cover;
+  width: 35vw;
+  height: 100px;
   display: block;
   margin:auto
 }
