--- a/css/noticia.css
+++ b/css/noticia.css
@@ -5,8 +5,8 @@
 
 .individual-news-container img {
   object-fit: cover;
-  width: 35vw;
-  height: 100px;
+  width: 100%;
+  height: 300px;
   display: block;
   margin:auto
 }
