--- a/css/noticia.css
+++ b/css/noticia.css
@@ -6,7 +6,8 @@
 .individual-news-container img {
   object-fit: cover;
   width: 100%;
-  height: 30%;
+  height: 100%;
+  position: absolute;
   display: block;
   margin:auto
 }
