--- a/css/noticia.css
+++ b/css/noticia.css
@@ -6,7 +6,7 @@
 .individual-news-container img {
   object-fit: cover;
   width: 100%;
-  height: 1%;
+  height: 250px;
   display: block;
   margin:auto
 }
