--- a/css/anadir_imagenes.css
+++ b/css/anadir_imagenes.css
@@ -2,7 +2,7 @@
   background-color: #e8e0ee;
   padding: 20px 0;
 }
-body{height: 100%;}
+html,body{height: 100%;}
 .content-container {
   width: 760px;
   margin: auto;
