--- a/css/anadir_imagenes.css
+++ b/css/anadir_imagenes.css
@@ -1,9 +1,8 @@
 .main {
   background-color: #e8e0ee;
   padding: 20px 0;
-  height: auto;
 }
-html,body{height: 100%;}
+html,body,body.main{height: 100%;}
 .content-container {
   width: 760px;
   margin: auto;
