--- a/css/anadir_imagenes.css
+++ b/css/anadir_imagenes.css
@@ -1,8 +1,7 @@
 .main {
   background-color: #e8e0ee;
   padding: 20px 0;
-  min-height:100%;
-  position: absolute;
+  height:90%;
 }
 html,body{height: 100%;}
 .content-container {
