--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,101 +1,128 @@
 .news-container {
-    width: 75%;
-    display: table;
-    margin-bottom: 30px;
-}
-  
-.news-container h1 {
-    text-align: left;
-}
-  
-.news-container h4 {
-    margin-top: 0;
-}
-  
-.news-row {
-    display: flex;
-    flex-wrap: wrap;
-}
-  
-.news-col {
-    padding: 0 20px;
-    margin-top: 25px;
-    width: 50%;
-}
-  
-.img-wrap {
-    float: left;
-    display: block;
-}
-  
-.news-image {
-    padding-right: 15px;
-    display: table-cell;
-    width: 200px;
-}
-  
-.news-text {
-    display: table-cell;
-    vertical-align: top;
-}
-  
-.news-text h5 {
-    margin: 0;
-    color: #555;
-}
-  
-.news-text p {
-    color: #666;
-}
-  
-.news-text a {
-    display: inline-block;
-    font-size: 20px;
-    color: #fff;
-    background-color: #104fa7;
-    padding: 8px 12px;
-    border-radius: 4px;
-    -webkit-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
-    -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
-    box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
-    cursor: pointer;
-}
-  
-.news-text a:hover {
-    background-color: #0080ff;
+  width: 90%;
+  display: table;
+  margin-bottom: 30px;
 }
 
-@media screen and (max-width: 1050px) {
-    .news-col {
-      width: 100%;
-    }
-  
-    @media screen and (max-width: 600px) {
-      .news-col {
-        width: 100%;
-        margin-top: 30px;
-      }
-  
-      .img-wrap {
-        width: 100%;
-      }
-  
-      .news-image {
-        max-height: 350px;
-        width: auto;
-        max-width: 100%;
-      }
-  
-      .news-text h5 {
-        margin-top: 10px;
-      }
-  
-      .news-text h3 {
-        margin: 5px 0 10px;
-      }
-  
-      .news-text p {
-        margin-top: 5px;
-      }
-    }
+.news-container h1 {
+  text-align: left;
+  /* margin-bottom: -30px; */
+}
+
+.news-container h4 {
+  margin-top: 0;
+}
+
+.news-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.news-col {
+  padding: 0 20px;
+  margin-top: 25px;
+  width: 50%;
+}
+
+.img-wrap {
+  float: left;
+  display: block;
+}
+
+.news-image {
+  padding-right: 15px;
+  display: table-cell;
+  /* width: 200px; */
+}
+
+.news-text {
+  display: table-cell;
+  vertical-align: top;
+}
+
+.news-text h5 {
+  color: #555;
+}
+
+.news-text h3 {
+  margin-top: 0;
+}
+
+.news-text p {
+  color: #666;
+  margin-bottom: 6px;
+}
+
+.news-text a {
+  display: inline-block;
+  font-size: 20px;
+  color: #fff;
+  background-color: #104fa7;
+  padding: 8px 12px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  cursor: pointer;
+  float: right;
+}
+
+.news-text a:hover {
+  background-color: #0080ff;
+}
+
+@media screen and (max-width: 1325px) {
+  .news-container {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .news-col {
+    width: 100%;
+  }
+  .img-wrap {
+    margin-right: 20px;
+  }
+  .news-text a {
+    float: left;
+  }
+  .news-text p {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .news-container h1 {
+    margin-bottom: -30px;
+  }
+
+  .news-col {
+    width: 100%;
+    margin-top: 60px;
+  }
+
+  .img-wrap {
+    width: 100%;
+  }
+
+  .news-image {
+    width: 100%;
+    padding: 0;
+  }
+
+  .news-text h5 {
+    margin-top: 10px;
+  }
+
+  .news-text h3 {
+    margin: 5px 0 10px;
+  }
+
+  .news-text p {
+    margin-top: 5px;
+  }
+  .news-text a {
+    float: right;
+  }
 }
