--- a/css/modificar_noticias.css
+++ b/css/modificar_noticias.css
@@ -1,15 +1,73 @@
-.news-col {
-  padding: 20px;
-}
-
 .news-container {
-  width: 75%;
+  width: 90%;
   display: table;
   margin-bottom: 30px;
 }
 
 .news-container h1 {
   text-align: left;
+}
+
+.news-container h4 {
+  margin-top: 0;
+}
+
+.news-row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.news-col {
+  padding: 0 20px;
+  margin-top: 25px;
+  width: 50%;
+}
+
+.img-wrap {
+  float: left;
+  display: block;
+}
+
+.news-image {
+  padding-right: 15px;
+  display: table-cell;
+  /* width: 200px; */
+}
+
+.news-text {
+  display: table-cell;
+  vertical-align: top;
+}
+
+.news-text h5 {
+  color: #555;
+}
+
+.news-text h3 {
+  margin-top: 0;
+}
+
+.news-text p {
+  color: #666;
+  margin-bottom: 6px;
+}
+
+.news-text a {
+  /* display: inline-block; */
+  font-size: 20px;
+  color: #fff;
+  background-color: #104fa7;
+  padding: 8px 12px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  cursor: pointer;
+  float: right;
+}
+
+.news-text a:hover {
+  background-color: #0080ff;
 }
 
 .news-col {
@@ -20,7 +78,7 @@
   position: absolute;
   height: 30px;
   top: 15px;
-  right: 0px;
+  right: -10px;
   cursor: pointer;
 }
 
@@ -28,6 +86,87 @@
   position: absolute;
   height: 30px;
   top: 60px;
-  right: -1px;
+  right: -10px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1325px) {
+  .news-container {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .news-container {
+    width: 80%;
+  }
+  .news-col {
+    width: 100%;
+  }
+  .img-wrap {
+    margin-right: 20px;
+  }
+  .news-text a {
+    float: left;
+  }
+  .news-text p {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (max-width: 1115px) {
+  .news-container {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  .news-container {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .news-container h1 {
+    margin-bottom: -30px;
+  }
+
+  .news-col {
+    width: 100%;
+    margin-top: 60px;
+  }
+
+  .img-wrap {
+    width: 100%;
+  }
+
+  .news-image {
+    width: 100%;
+    padding: 0;
+  }
+
+  .news-text h5 {
+    margin-top: 10px;
+  }
+
+  .news-text h3 {
+    margin: 5px 0 10px;
+  }
+
+  .news-text p {
+    margin-top: 5px;
+  }
+  .news-text a {
+    float: right;
+  }
+
+  .news-col .edit-img {
+    top: 0px;
+    right: -15px;
+  }
+
+  .news-col .bin-img {
+    top: 45px;
+    right: -15px;
+  }
 }
