--- a/css/modificar_noticias.css
+++ b/css/modificar_noticias.css
@@ -1,3 +1,8 @@
+.header-container {
+  width: 80%;
+  margin: auto;
+}
+
 .news-container {
   width: 90%;
   display: table;
@@ -127,8 +132,9 @@
 }
 
 @media screen and (max-width: 700px) {
-  .news-container h1 {
-    margin-bottom: -30px;
+  .header-container {
+    padding-top: 10px;
+    margin-bottom: -40px;
   }
 
   .news-col {
