--- a/css/noticias.css
+++ b/css/noticias.css
@@ -1,5 +1,10 @@
+.header-container {
+  width: 80%;
+  margin: auto;
+}
+
 .news-container {
-  width: 75%;
+  width: 90%;
   display: table;
   margin-bottom: 30px;
 }
@@ -120,8 +125,13 @@
 }
 
 @media screen and (max-width: 700px) {
+  .header-container {
+    padding-top: 10px;
+    margin-bottom: -40px;
+  }
+
   .news-container h1 {
-    margin-bottom: -30px;
+    margin-bottom: -40px;
   }
 
   .news-col {
