--- a/css/entrenador.css
+++ b/css/entrenador.css
@@ -13,7 +13,7 @@ body {
   margin: auto;
 }
 .logout-img {
-  margin-top: 380px;
+  margin-top: 30px;
   padding-left: 80px;
   height: 40px;
   cursor: pointer;
@@ -21,6 +21,8 @@ body {
 .title-row {
   background-color: #1a3e7a;
   transition: 0.5s;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .open-btn {
