--- a/css/noticias.css
+++ b/css/noticias.css
@@ -173,6 +173,9 @@
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .form-control {
