--- a/css/modificar_horarios.css
+++ b/css/modificar_horarios.css
@@ -1,7 +1,7 @@
-body {
+.main {
   background-color: white;
 }
-.schedule-img {
-  height: auto;
+.schedule img {
+  height: 50px;
   width: 100%;
 }
