--- a/css/modificar_horarios.css
+++ b/css/modificar_horarios.css
@@ -5,9 +5,10 @@ body {
 }
 
 .schedule img {
-  height: auto;
-  width: 50%;
-  margin: 0;
+  height: auto; /* Para pantalla completa poner esto a 100% */
+  width: 50%; /* 100% */
+  margin: auto;
   padding: 0;
   max-height: 100%;
+  display: block;
 }
