--- a/css/modificar_horarios.css
+++ b/css/modificar_horarios.css
@@ -12,3 +12,9 @@ body {
   max-height: 100%;
   display: block;
 }
+@media screen and (max-width: 800px) {
+  .schedule img {
+    height: auto;
+    width: 100%;
+  }
+}
