--- a/css/modificar_logro.css
+++ b/css/modificar_logro.css
@@ -1,6 +1,11 @@
 .main {
   background-color: #e8e0ee;
   padding: 20px 0;
+  height: 80%;
+}
+html,
+body {
+  height: 100%;
 }
 
 .content-container {
