--- a/css/login.css
+++ b/css/login.css
@@ -7,34 +7,34 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-}
-.caja {
-  padding: 0;
-}
-.main-login {
-  margin: 0 auto;
-  margin-top: 25%;
-  padding: 0;
-}
-.modal-content {
-  opacity: 0.95;
-  padding: 0 20px;
-  box-shadow: 0px 0px 3px #ffffff;
-}
-.user-img {
-  margin-top: -50px;
-  margin-top: 35px;
-}
-.form-button {
-  margin-top: 50px;
-  text-align: left;
+  /* background-color: #f8f8f8; */
 }
 
-.link-button {
-  display: flex;
-  flex-wrap: wrap;
-  float: left;
+.modal-dialog {
 }
+
+.main-section {
+  margin-top: 10%;
+  /* border: 1px solid #aaa; */
+  border-radius: 5px;
+}
+
+h1 {
+  /* text-align: center; */
+}
+
+.modal-content {
+  height: 100%;
+  opacity: 0.95;
+  padding: 0 20px;
+  /* background-color: #f8f8f8; */
+  /* box-shadow: 0px 0px 3px #ffffff; */
+}
+.user-img {
+  margin-top: 25px;
+  margin-bottom: 10px;
+}
+
 .form-group input {
   height: 42px;
   font-size: 18px;
@@ -60,10 +60,7 @@ body {
 
 button {
   width: 30%;
-  margin: 5px 0 25;
-}
-.help i {
-  font-size: 20px;
+  margin: 25px 0 20px;
 }
 .forgot i {
   font-size: 20px;
@@ -74,9 +71,37 @@ a {
   text-decoration: none;
   background-color: transparent;
 }
-@media (max-width: 600px) {
+
+.link {
+  padding-left: 3px;
+}
+
+@media (max-width: 520px) {
+  .back-btn,
   .btn-primary {
     width: 40vw;
-    padding: 10px;
+    padding: 10px 5px;
+    margin-top: 20px;
   }
+}
+
+#user-group {
+  margin-top: 8px;
+}
+
+#password-group {
+  margin-top: 13px;
+  margin-bottom: 10px;
+}
+
+.form-check {
+  margin-bottom: 8px;
+}
+
+.back-btn {
+  background-color: #ddd;
+}
+
+.back-btn:hover {
+  background-color: #bbb;
 }
