--- a/css/administrar_inscripciones.css
+++ b/css/administrar_inscripciones.css
@@ -98,4 +98,9 @@
   .gymnast-container p {
     margin: 5px auto;
   }
+
+  .name-container p,
+  .name-container h2 {
+    padding-left: 20px;
+  }
 }
