--- a/css/administrar_usuarios.css
+++ b/css/administrar_usuarios.css
@@ -208,4 +208,9 @@
   .gymnast-container p {
     margin: 5px auto;
   }
+
+  .name-container p,
+  .name-container h2 {
+    padding-left: 20px;
+  }
 }
